Closed Bug 1326330 Opened 8 years ago Closed 8 years ago

Some MediaQueue code cleanup

Categories

(Core :: Audio/Video: Playback, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: jwwang, Assigned: jwwang)

References

Details

Attachments

(2 files)

No description provided.
Assignee: nobody → jwwang
Blocks: 1324999
Priority: -- → P3
Attachment #8822580 - Flags: review?(jacheng)
Attachment #8822581 - Flags: review?(jacheng)
Attachment #8822580 - Flags: review?(jacheng) → review+
Attachment #8822581 - Flags: review?(jacheng) → review+
Thanks!
Pushed by jwwang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/27f5d9d78b9d Part 1 - remove unused functions. r=JamesCheng https://hg.mozilla.org/integration/autoland/rev/86dde0dace53 Part 2 - add assertions and checks. r=JamesCheng
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: