Bug 1326330. Part 1 - remove unused functions. r=JamesCheng

MozReview-Commit-ID: 66XDaghbKUy